// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculation Result Selector emptry result getCO2EmissionReport should return the co2 emission report data 1`] = `
Object {
  "co2_downstream": Object {
    "emission": 10.296,
    "emissionPercentage": 67.31171548117155,
    "loadcases": Array [
      Object {
        "emission": 2.848,
        "emissionPercentage": 18.619246861924683,
        "id": "Loadcase 1",
        "operatingTimeInHours": 3506,
        "unit": "kg",
      },
      Object {
        "emission": 7.4478,
        "emissionPercentage": 48.69116108786611,
        "id": "Loadcase 2",
        "operatingTimeInHours": 5260,
        "unit": "kg",
      },
    ],
  },
  "co2_upstream": 5,
  "co2_upstreamEmissionPercentage": 32.68828451882845,
  "totalEmission": 15.296,
}
`;

exports[`Calculation Result Selector emptry result getCalculationWithResult should return the calculations with result 1`] = `
Array [
  Object {
    "disabled": true,
    "label": "calculationTypes.co2ForProduction",
    "name": "emission",
    "resultAvailable": true,
    "selected": true,
    "svgIcon": "co2",
    "visible": true,
  },
  Object {
    "disabled": false,
    "icon": "compress",
    "label": "calculationTypes.frictionalPowerloss",
    "name": "frictionalPowerloss",
    "resultAvailable": true,
    "selected": true,
    "visible": true,
  },
]
`;

exports[`Calculation Result Selector emptry result getReportDownstreamErrors should return report downstream errors 1`] = `Array []`;

exports[`Calculation Result Selector emptry result getReportErrors should return report errors 1`] = `
Array [
  "Errors",
]
`;

exports[`Calculation Result Selector emptry result getReportNotes should return report notes 1`] = `
Array [
  "Notes",
]
`;

exports[`Calculation Result Selector emptry result getReportWarnings should return report warnings 1`] = `
Array [
  "Warnings",
]
`;

exports[`Calculation Result Selector emptry result getResultInput should return result input 1`] = `
Array [
  Object {
    "hasNestedStructure": true,
    "title": "some title",
  },
]
`;

exports[`Calculation Result Selector emptry result getSelectedCalculations should return the selected calculations 1`] = `
Array [
  Object {
    "disabled": true,
    "label": "calculationTypes.co2ForProduction",
    "name": "emission",
    "resultAvailable": true,
    "selected": true,
    "svgIcon": "co2",
    "visible": true,
  },
  Object {
    "disabled": false,
    "icon": "compress",
    "label": "calculationTypes.frictionalPowerloss",
    "name": "frictionalPowerloss",
    "resultAvailable": true,
    "selected": true,
    "visible": true,
  },
]
`;

exports[`Calculation Result Selector full result getAllErrors should return report errors 1`] = `
Array [
  "Calculation failed for some of the reason",
]
`;

exports[`Calculation Result Selector full result getCO2EmissionReport should return the co2 emission report data 1`] = `
Object {
  "co2_downstream": Object {
    "emission": 10.296,
    "emissionPercentage": 67.31171548117155,
    "loadcases": Array [
      Object {
        "emission": 2.848,
        "emissionPercentage": 18.619246861924683,
        "id": "Loadcase 1",
        "operatingTimeInHours": 3506,
        "unit": "kg",
      },
      Object {
        "emission": 7.4478,
        "emissionPercentage": 48.69116108786611,
        "id": "Loadcase 2",
        "operatingTimeInHours": 5260,
        "unit": "kg",
      },
    ],
  },
  "co2_upstream": 5,
  "co2_upstreamEmissionPercentage": 32.68828451882845,
  "totalEmission": 15.296,
}
`;

exports[`Calculation Result Selector full result getCalculationWithResult should return the calculations with result 1`] = `
Array [
  Object {
    "disabled": true,
    "label": "calculationTypes.co2ForProduction",
    "name": "emission",
    "resultAvailable": true,
    "selected": true,
    "svgIcon": "co2",
    "visible": true,
  },
  Object {
    "disabled": false,
    "icon": "compress",
    "label": "calculationTypes.frictionalPowerloss",
    "name": "frictionalPowerloss",
    "resultAvailable": true,
    "selected": true,
    "visible": true,
  },
]
`;

exports[`Calculation Result Selector full result getFrictionalPowerlossReport should return frictionalPowerloss 1`] = `
Array [
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 3,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 5,
      },
    ],
    "short": "NR",
    "title": "totalFrictionalPowerLoss",
    "unit": "W",
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 0.03,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 0.041,
      },
    ],
    "short": "MR",
    "title": "totalFrictionalTorque",
    "unit": "N m",
  },
]
`;

exports[`Calculation Result Selector full result getFrictionalPowerlossReport should return null result if no value frictionalPowerloss 1`] = `null`;

exports[`Calculation Result Selector full result getLubricationReport should return lubrication 1`] = `
Array [
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 28,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 65.4,
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": 65.4,
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": 65.4,
      },
    ],
    "short": "ny",
    "title": "operatingViscosity",
    "unit": "mm²/s",
    "warning": undefined,
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 97.9,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 45.8,
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": 45.8,
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": 45.8,
      },
    ],
    "short": "ny1",
    "title": "referenceViscosity",
    "unit": "mm²/s",
    "warning": undefined,
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 0.29,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 1.43,
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": 1.43,
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": 1.43,
      },
    ],
    "short": "kappa",
    "title": "viscosityRatio",
    "unit": undefined,
    "warning": undefined,
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 0.53,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 2.77,
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": 2.77,
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": 2.77,
      },
    ],
    "short": "a_ISO",
    "title": "lifeAdjustmentFactor",
    "unit": undefined,
    "warning": undefined,
  },
  Object {
    "short": "tfR",
    "title": "guideIntervalRelubrication",
    "unit": "h",
    "value": "~ 11360",
  },
]
`;

exports[`Calculation Result Selector full result getOverrollingFrequencies should return overrollingFrequencies 1`] = `
Array [
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": "18.5926",
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": "46.4816",
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": "46.4816",
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": "46.4816",
      },
    ],
    "short": "BPFI",
    "title": "BPFI",
    "unit": "1/s",
    "warning": undefined,
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": "11.4074",
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": "28.5184",
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": "28.5184",
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": "28.5184",
      },
    ],
    "short": "BPFO",
    "title": "BPFO",
    "unit": "1/s",
    "warning": undefined,
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": "6.1871",
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": "15.4676",
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": "15.4676",
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": "15.4676",
      },
    ],
    "short": "BSF",
    "title": "BSF",
    "unit": "1/s",
    "warning": undefined,
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": "1.2675",
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": "3.1687",
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": "3.1687",
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": "3.1687",
      },
    ],
    "short": "FTF",
    "title": "FTF",
    "unit": "1/s",
    "warning": undefined,
  },
]
`;

exports[`Calculation Result Selector full result getRatingLifeResultReport should return ratingLife 1`] = `
Array [
  Object {
    "short": "Lh10",
    "title": "lh10",
    "unit": "h",
    "value": "152277",
  },
  Object {
    "short": "Lh_nm",
    "title": "lh_nm",
    "unit": "h",
    "value": "415307",
  },
  Object {
    "short": "P",
    "title": "p",
    "unit": "N",
    "value": "1028.71",
  },
  Object {
    "short": "n",
    "title": "n",
    "unit": "1/min",
    "value": "270.0",
  },
  Object {
    "short": "S0_min",
    "title": "s0_min",
    "value": "2.844",
  },
  Object {
    "short": "P0_max",
    "title": "p0_max",
    "unit": "N",
    "value": "1125.00",
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 200,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 1125,
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": 1125,
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": 1125,
      },
    ],
    "short": "P0",
    "title": "p0",
    "unit": "N",
    "warning": undefined,
  },
  Object {
    "loadcaseValues": Array [
      Object {
        "loadcaseName": "Loadcase 1",
        "value": 200,
      },
      Object {
        "loadcaseName": "Loadcase 2",
        "value": 1250,
      },
      Object {
        "loadcaseName": "Loadcase 3",
        "value": 1250,
      },
      Object {
        "loadcaseName": "Loadcase 4",
        "value": 1250,
      },
    ],
    "short": "P_i",
    "title": "p_i",
    "unit": "N",
    "warning": undefined,
  },
]
`;

exports[`Calculation Result Selector full result getReportErrors should return report errors 1`] = `
Array [
  "Calculation failed for some of the reason",
]
`;

exports[`Calculation Result Selector full result getReportNotes should return report notes 1`] = `
Array [
  "Please note that operating temperature needs to meet conditions...",
]
`;

exports[`Calculation Result Selector full result getReportWarnings should return report warnings 1`] = `
Array [
  "The total of the load case time portions is less than 100%. The missing time portion is assumed to be a stationary period.",
  "  · Sum of time proportions = 90.000 %",
  "Please note the miscibility of greases in the chapter on grease lubrication.",
]
`;

exports[`Calculation Result Selector full result getResultInput should return result input 1`] = `
Array [
  Object {
    "hasNestedStructure": false,
    "subItems": Array [
      Object {
        "designation": "Designation",
        "hasNestedStructure": false,
        "value": "2303-TVH",
      },
      Object {
        "abbreviation": "d",
        "designation": "Inside diameter",
        "hasNestedStructure": false,
        "unit": "mm",
        "value": "17.000",
      },
      Object {
        "abbreviation": "D",
        "designation": "Outside diameter",
        "hasNestedStructure": false,
        "unit": "mm",
        "value": "47.000",
      },
      Object {
        "abbreviation": "B",
        "designation": "Width",
        "hasNestedStructure": false,
        "unit": "mm",
        "value": "19.000",
      },
      Object {
        "abbreviation": "C",
        "designation": "Basic dynamic load rating",
        "hasNestedStructure": false,
        "unit": "N",
        "value": "13900",
      },
      Object {
        "abbreviation": "C0",
        "designation": "Basic static load rating",
        "hasNestedStructure": false,
        "unit": "N",
        "value": "3200",
      },
      Object {
        "abbreviation": "Cu",
        "designation": "Fatigue limit load",
        "hasNestedStructure": false,
        "unit": "N",
        "value": "203",
      },
      Object {
        "abbreviation": "n_ref",
        "designation": "Reference speed",
        "hasNestedStructure": false,
        "unit": "1/min",
        "value": "14900.0",
      },
      Object {
        "abbreviation": "n_lim",
        "designation": "Limiting speed",
        "hasNestedStructure": false,
        "unit": "1/min",
        "value": "17000.0",
      },
      Object {
        "abbreviation": "n_lim_o",
        "designation": "Limiting speed, oil",
        "hasNestedStructure": false,
        "unit": "1/min",
        "value": "17000.0",
      },
      Object {
        "abbreviation": "n_lim_g",
        "designation": "Limiting speed, grease",
        "hasNestedStructure": false,
        "unit": "1/min",
        "value": "14400.0",
      },
    ],
    "title": "Bearing",
    "titleID": "STRING_OUTP_BEARING",
  },
  Object {
    "hasNestedStructure": false,
    "meaningfulRound": true,
    "subItems": Array [
      Object {
        "abbreviation": "BPFFO",
        "designation": "Overrolling frequency factor on outer ring",
        "hasNestedStructure": false,
        "value": "3.4222",
      },
      Object {
        "abbreviation": "BPFFI",
        "designation": "Overrolling frequency factor on inner ring",
        "hasNestedStructure": false,
        "value": "5.5778",
      },
      Object {
        "abbreviation": "BSFF",
        "designation": "Overrolling frequency factor on rolling element",
        "hasNestedStructure": false,
        "value": "1.8561",
      },
      Object {
        "abbreviation": "RPFFB",
        "designation": "Ring pass frequency factor on rolling element",
        "hasNestedStructure": false,
        "value": "3.7122",
      },
      Object {
        "abbreviation": "FTFF_i",
        "designation": "Speed factor of rolling element set for rotating inner ring",
        "hasNestedStructure": false,
        "value": "0.3802",
      },
      Object {
        "abbreviation": "FTFF_o",
        "designation": "Speed factor of rolling element set for rotating outer ring",
        "hasNestedStructure": false,
        "value": "0.6198",
      },
    ],
    "title": "Basic frequency factors related to 1/s",
    "titleID": "STRING_OUTP_BASIC_FREQUENCIES_FACTOR",
  },
  Object {
    "hasNestedStructure": false,
    "subItems": Array [
      Object {
        "designation": "Permitted lubricants",
        "hasNestedStructure": false,
        "value": "Oil or grease",
      },
      Object {
        "designation": "Type of lubrication",
        "hasNestedStructure": false,
        "value": "grease",
      },
      Object {
        "designation": "Type of grease",
        "hasNestedStructure": false,
        "value": "Arcanol MULTI2",
      },
      Object {
        "abbreviation": "ny 40",
        "designation": "Viscosity at 40°C",
        "hasNestedStructure": false,
        "unit": "mm²/s",
        "value": "110.0",
      },
      Object {
        "abbreviation": "ny 100",
        "designation": "Viscosity at 100°C",
        "hasNestedStructure": false,
        "unit": "mm²/s",
        "value": "11.0",
      },
      Object {
        "designation": "Contamination",
        "hasNestedStructure": false,
        "value": "normal cleanliness",
      },
      Object {
        "abbreviation": "dQ/dt",
        "designation": "External heat flow",
        "hasNestedStructure": false,
        "unit": "kW",
        "value": "0.0",
      },
    ],
    "title": "Lubrication data",
    "titleID": "STRING_OUTP_LUBRICATING_DATA",
  },
  Object {
    "hasNestedStructure": false,
    "subItems": Array [
      Object {
        "abbreviation": "t",
        "designation": "Ambient temperature",
        "hasNestedStructure": false,
        "unit": "°C",
        "value": "20.0",
      },
      Object {
        "designation": "Environmental influence",
        "hasNestedStructure": false,
        "value": "0.8 (moderate)",
      },
      Object {
        "designation": "Requisite reliability",
        "hasNestedStructure": false,
        "value": "90 %",
      },
      Object {
        "designation": "Condition of rotation",
        "hasNestedStructure": false,
        "value": "rotating inner ring",
      },
    ],
    "title": "Other conditions",
    "titleID": "STRING_OUTP_MISCELLANEOUS_DATA",
  },
  Object {
    "hasNestedStructure": true,
    "subItems": Array [
      Object {
        "hasNestedStructure": false,
        "subItems": Array [
          Object {
            "designation": "Time portion (q)",
            "hasNestedStructure": false,
            "unit": "%",
            "value": "60.000",
          },
          Object {
            "designation": "Type of motion",
            "hasNestedStructure": false,
            "value": "rotating",
          },
          Object {
            "designation": "Speed (n_i)",
            "hasNestedStructure": false,
            "unit": "1/min",
            "value": "200.00",
          },
          Object {
            "designation": "Mean operating temperature (T)",
            "hasNestedStructure": false,
            "unit": "°C",
            "value": "70",
          },
          Object {
            "designation": "Radial load (Fr)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "200.0",
          },
          Object {
            "designation": "Axial load (Fa)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "0.0",
          },
        ],
        "title": "Loadcase 1",
      },
      Object {
        "hasNestedStructure": false,
        "subItems": Array [
          Object {
            "designation": "Time portion (q)",
            "hasNestedStructure": false,
            "unit": "%",
            "value": "10.000",
          },
          Object {
            "designation": "Type of motion",
            "hasNestedStructure": false,
            "value": "rotating",
          },
          Object {
            "designation": "Speed (n_i)",
            "hasNestedStructure": false,
            "unit": "1/min",
            "value": "500.00",
          },
          Object {
            "designation": "Mean operating temperature (T)",
            "hasNestedStructure": false,
            "unit": "°C",
            "value": "50",
          },
          Object {
            "designation": "Radial load (Fr)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "500.0",
          },
          Object {
            "designation": "Axial load (Fa)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "500.0",
          },
        ],
        "title": "Loadcase 2",
      },
      Object {
        "hasNestedStructure": false,
        "subItems": Array [
          Object {
            "designation": "Time portion (q)",
            "hasNestedStructure": false,
            "unit": "%",
            "value": "10.000",
          },
          Object {
            "designation": "Type of motion",
            "hasNestedStructure": false,
            "value": "rotating",
          },
          Object {
            "designation": "Speed (n_i)",
            "hasNestedStructure": false,
            "unit": "1/min",
            "value": "500.00",
          },
          Object {
            "designation": "Mean operating temperature (T)",
            "hasNestedStructure": false,
            "unit": "°C",
            "value": "50",
          },
          Object {
            "designation": "Radial load (Fr)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "500.0",
          },
          Object {
            "designation": "Axial load (Fa)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "500.0",
          },
        ],
        "title": "Loadcase 3",
      },
      Object {
        "hasNestedStructure": false,
        "subItems": Array [
          Object {
            "designation": "Time portion (q)",
            "hasNestedStructure": false,
            "unit": "%",
            "value": "10.000",
          },
          Object {
            "designation": "Type of motion",
            "hasNestedStructure": false,
            "value": "rotating",
          },
          Object {
            "designation": "Speed (n_i)",
            "hasNestedStructure": false,
            "unit": "1/min",
            "value": "500.00",
          },
          Object {
            "designation": "Mean operating temperature (T)",
            "hasNestedStructure": false,
            "unit": "°C",
            "value": "50",
          },
          Object {
            "designation": "Radial load (Fr)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "500.0",
          },
          Object {
            "designation": "Axial load (Fa)",
            "hasNestedStructure": false,
            "unit": "N",
            "value": "500.0",
          },
        ],
        "title": "Loadcase 4",
      },
    ],
    "title": "Load",
    "titleID": "STRING_OUTP_INPUT_DATA_FOR_ALL_LOADCASES",
  },
]
`;

exports[`Calculation Result Selector full result getSelectedCalculations should return the selected calculations 1`] = `
Array [
  Object {
    "disabled": true,
    "label": "calculationTypes.co2ForProduction",
    "name": "emission",
    "resultAvailable": true,
    "selected": true,
    "svgIcon": "co2",
    "visible": true,
  },
  Object {
    "disabled": false,
    "icon": "compress",
    "label": "calculationTypes.frictionalPowerloss",
    "name": "frictionalPowerloss",
    "resultAvailable": true,
    "selected": true,
    "visible": true,
  },
]
`;
